--- a/.github/workflows/html-lint-windows.yml
+++ b/.github/workflows/html-lint-windows.yml
@@ -1,16 +1,21 @@
-name: [nama proses]
+name: Cek Kode HTML (Windows)
 
 on:
   push:
     branches:
-      - [nama branch]
+      - main
   pull_request:
 
 jobs:
   lint:
-    runs-on: [OS]
+    runs-on: windows-latest
 
     steps:
-      - name: [nama action]
-        uses: [nama tools]
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
+      - name: Install HTMLHint
+        run: npm install -g htmlhint
+
+      - name: Periksa HTML
+        run: htmlhint "**/*.html"
